--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "langchain-nextjs-template",
+  "name": "2tag-metamove",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "yarn@3.5.1",
+  "packageManager": "npm@10.9.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,6 +14,8 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@aptos-labs/wallet-adapter-ant-design": "^4.0.3",
+    "@bitget-wallet/aptos-wallet-adapter": "^0.1.2",
     "@langchain/community": "^0.3.25",
     "@langchain/core": "^0.3.31",
     "@langchain/google-genai": "^0.1.8",
@@ -21,10 +23,13 @@
     "@langchain/langgraph-sdk": "^0.0.45",
     "@langchain/openai": "^0.3.17",
     "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@supabase/supabase-js": "^2.32.0",
+    "@tanstack/react-query": "^5.66.9",
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
@@ -46,7 +51,8 @@
     "use-stick-to-bottom": "^1.0.44",
     "vaul": "^1.1.2",
     "zod": "^3.23.8",
-    "zod-to-json-schema": "^3.23.2"
+    "zod-to-json-schema": "^3.23.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.19",
