--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 OPENAI_API_KEY="YOUR_API_KEY"
 LANGCHAIN_CALLBACKS_BACKGROUND=false
-
+GOOGLE_API_KEY=""
+NODIT_END_POINT=""
+DUNE_API=""
 # Required for agent example
 # SERPAPI_API_KEY="YOUR_API_KEY"
 
